# json-yaml-comparer

./: .coverage  .gitignore  .travis.yml  Linter  Makefile  README.md  pyproject.toml  python-package.yml
.github/workflows/: README.md  Superlinter.yml  hexlet-check.yml  linter.yml  tests.yml
gendiff/: __init__.py  cli.py  dict_diff.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  text.py
gendiff/scripts/: gendiff.py
tests/: test_dict_diff.py  test_gendiff.py  test_gendiff_json.py  test_gendiff_yml.py  test_parser.py
tests/fixtures/: after.json  after.yaml  before.json  before.yaml  expected_json.json  expected_plain.txt  expected_text.txt  test_file1.json  test_file1.yml  test_file2.json  test_file2.yml  test_nested_file1.json  test_nested_file2.json
