[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander Krutov"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.scripts]
gendiff = "gendiff.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
PyYAML = "^5.4.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

